--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "axios": "^0.17.1",
     "firebase": "^4.8.1",
+    "fresh": "^0.5.2",
+    "hoek": "^5.0.3",
     "lodash": "^4.17.5",
     "moment": "^2.20.1",
     "npm": "^5.7.1",
